Clase 01: Fin del juego

--- a/Semana01/index.html
+++ b/Semana01/index.html
@@ -39,6 +39,9 @@
 
     <!-- 👇 Comentar o descomentar para conectar con el script -->
 
+    <!-- <script>
+        console.log("Hola Mundo");
+    </script> -->
     <script src="./clase1.js"></script>
     <script src="./clase2.js"></script>
     <script src="./clase2Bis.js"></script>
