--- a/ToDo-App v1_1_2/mis-tareas.html
+++ b/ToDo-App v1_1_2/mis-tareas.html
@@ -18,8 +18,16 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Libreria SweetAlert -->
+  <!-- Modo light -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
+  <!-- Modo Dark -->
+  <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
   
   <!-- Librería Animate On Scrol  -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
  
   <!-- logica de la página -->
   <script src="./scripts/taks.js"></script>
